# fast_format

./: CMakeLists.txt  FastFormat.hpp  README.md  main.cpp
